apps/sump-it/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sump-it
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sump-it
  template:
    metadata:
      labels:
        app: sump-it
    spec:
      containers:
        - name: sump-it
          image: ghcr.io/orriborri/sump-it:main-e500a3e
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
