apps/sump-it/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sump-it
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: sump-it
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
