apps/sump-it/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sump-it
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: private
  tls:
    - secretName: orriborri-com-tls
      hosts:
        - sump.orriborri.com
  rules:
    - host: sump.orriborri.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sump-it
                port:
                  number: 80
